# QueryHub

./: .bandit  .dockerignore  .gitignore  .safety-policy.yml  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  DOCKER_BUILD_SUMMARY.md  Dockerfile  INTEGRATION_TESTS.md  LICENSE  LOGGING_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  docker-compose.test.yml  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  integration-tests.yml
config/providers/: 01_databases.yaml  02_azure.yaml  03_rest_apis.yaml  04_csv.yaml  README.md  credentials.yaml  providers.yaml
config/reports/: README.md  sample_report.yaml
config/reports/daily_sales_report/: 01_total_revenue.yaml  02_revenue_by_category.yaml  03_sales_trend.yaml  04_top_products.yaml  05_sales_by_region.yaml  06_hourly_pattern.yaml  07_large_orders.yaml  metadata.yaml
config/smtp/: README.md  default.yaml
config/templates/: README.md  report.html.j2
data/: pipeline.csv
docs/: DOCUMENTATION_STRATEGY.md  MAINTENANCE_SUMMARY.md  index.md
docs/guides/: azure-default-credentials.md  email-testing.md  getting-started.md  installation.md  migration.md  uv-migration.md
docs/images/: .gitkeep  README.md  chart_visualizations_report.html  sales_dashboard_report.html
docs/reference/: architecture.md  cli.md  docker-integration-tests.md  html-visualizations.md  integration-test-architecture.md  integration-test-architecture.txt  refactoring-summary.md  security-tools.md  solid-architecture.md  uv-commands.md
examples/: README.md  example_config.yaml  providers_complete.yaml  report_daily_sales.yaml  report_executive_dashboard.yaml  smtp_examples.yaml
scripts/: build_docker.sh  convert_reports.py  demo_integration_tests.py  integration_test.sh  setup_env.sh
src/queryhub/: __init__.py  __main__.py  cli.py
src/queryhub/config/: __init__.py  converters.py  credential_models.py  environment.py  loader.py  models.py  provider_models.py
src/queryhub/core/: contracts.py  credentials.py  errors.py  providers.py  resource_manager.py  retry.py
src/queryhub/email/: client.py
src/queryhub/providers/: __init__.py  adx.py  base.py  base_credentials.py  base_query_provider.py  credential_factory.py  csv.py  factory.py  provider_factory.py  rest.py  sql.py
src/queryhub/providers/aws/: __init__.py  credentials.py
src/queryhub/providers/aws/resources/: __init__.py
src/queryhub/providers/azure/: __init__.py  credentials.py
src/queryhub/providers/azure/resources/: __init__.py  adx.py
src/queryhub/providers/gcp/: __init__.py  credentials.py
src/queryhub/providers/gcp/resources/: __init__.py
src/queryhub/providers/generic/: __init__.py  credentials.py
src/queryhub/providers/generic/resources/: __init__.py  csv.py  rest.py  sql.py
src/queryhub/rendering/: __init__.py  jinja_env.py  renderers.py  template_engine.py
src/queryhub/services/: __init__.py  application.py  component_executor.py  executor.py
test_output/: all_visualizations_report.html  all_viz_integration.html  chart_visualizations_report.html  integration_test_report.html  sales_dashboard_report.html  wheel_all_viz_report.html  wheel_chart_report.html  wheel_test_report.html
tests/: test_adx_integration.py  test_config_loader.py  test_credential_factory.py  test_credentials.py  test_docker_integration.py  test_email_client.py  test_environment.py  test_loader_components.py  test_placeholder.py  test_providers.py  test_renderers.py  test_report_executor.py  test_retry.py
tests/fixtures/config_basic/: smtp.yaml
tests/fixtures/config_basic/providers/: providers.yaml
tests/fixtures/config_basic/reports/: report.yaml
tests/fixtures/config_basic/reports/csv_only/: 01_csv_table.yaml  metadata.yaml
tests/fixtures/data/: sample.csv
tests/fixtures/docker/: init-postgres.sql
tests/fixtures/docker_integration/: README.md  smtp.yaml
tests/fixtures/docker_integration/providers/: providers.yaml
tests/fixtures/docker_integration/reports/: all_visualizations.yaml  chart_visualizations.yaml  sales_dashboard.yaml
tests/fixtures/docker_integration/reports/all_visualizations/: 01_simple_table.yaml  02_aggregated_table.yaml  03_feedback_table.yaml  04_total_revenue_text.yaml  05_transaction_count.yaml  06_health_status.yaml  07_top_products.yaml  08_average_ratings.yaml  09_recent_transactions.yaml  10_average_rating.yaml  11_key_metrics_card.yaml  12_top_regions_list.yaml  13_rating_distribution.yaml  14_product_badges.yaml  15_health_alert.yaml  metadata.yaml
tests/fixtures/docker_integration/reports/chart_visualizations/: 01_revenue_by_region_bar.yaml  02_revenue_trend_line.yaml  03_units_vs_revenue_scatter.yaml  04_product_performance_bar.yaml  05_transactions_trend_line.yaml  06_ratings_by_product_bar.yaml  07_health_scatter.yaml  08_summary_stats_table.yaml  metadata.yaml
(+6 files in other folders)
