[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queryhub"
version = "0.1.0"
description = "Automation platform for scheduled query-based email reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "QueryHub Maintainers" }
]
keywords = ["automation", "reports", "scheduling"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "mypy>=1.7"
]

[project.urls]
Homepage = "https://github.com/isasnovich/QueryHub"
Documentation = "https://github.com/isasnovich/QueryHub#readme"
Source = "https://github.com/isasnovich/QueryHub"
Changelog = "https://github.com/isasnovich/QueryHub/blob/main/CHANGELOG.md"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
