[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queryhub"
version = "0.1.0"
description = "Automation platform for scheduled query-based email reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "QueryHub Maintainers" }
]
keywords = ["automation", "reports", "scheduling"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.5",
  "Jinja2>=3.1",
  "typer>=0.12",
  "aiosmtplib>=2.0",
  "aiohttp>=3.9",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "azure-kusto-data>=4.5",
  "plotly>=5.18",
  "numpy>=1.24",
  "pandas>=2.0",
  "kaleido>=0.2",
  "python-dateutil>=2.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "mypy>=1.7",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "types-PyYAML>=6.0.12.20240808",
  "aiosqlite>=0.20"
]

[project.urls]
Homepage = "https://github.com/isasnovich/QueryHub"
Documentation = "https://github.com/isasnovich/QueryHub#readme"
Source = "https://github.com/isasnovich/QueryHub"
Changelog = "https://github.com/isasnovich/QueryHub/blob/main/CHANGELOG.md"

[project.scripts]
queryhub = "queryhub.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
